# mod_discord_bot

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/: 20221015170249_init.sql  20221015170616_change_type_collumn_to_text_temp.sql  20221016004259_remove_enum_and_add_old_channel.sql  20221016005305_add_old_channel_column.sql  20221016005733_change_channel_id_to_nullable.sql  20221016151431_nullable.sql  init.sql
src/: bot_context.rs  config.rs  database.rs  main.rs  rabbitmq.rs  util.rs  voice_connections.rs
src/discord/: commands.rs  custom_id.rs  event_handler.rs  mod.rs
