[package]
name = "mod-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
figment = { version = "0.10.8", features = ["env"] }
serde = "1.0.145"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11", default_features = false, features = [
  "builder",
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "http",
] }
