[package]
name = "mod-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres"] }
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1"] }
dotenv = "0.15.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.11", default_features = false, features = [
  "builder",
  "client",
  "gateway",
  "rustls_backend",
  "model",
  "http",
] }
redis = { version = "0.21.5", features = ["tokio-comp"] }
poise = { version = "0.4.1", default-features = false }
